# PythonProjectWizard

./: Pipfile  pyproject.toml
TestProject/test_project/: main.py
merlin/: answer.py  directories.py  exception.py  main.py  project.py  question.py  question_suite.py  validator.py
merlin/dialog/: dialog.py  project_dialog.py
merlin/dialog_runner/: dialog_runner.py  synchronous_runner.py
merlin/display/: console.py  display.py
merlin/question/: bool_question.py  plain_question.py  question.py  version_question.py
merlin/test/: test_answer.py  test_dialog.py  test_dialog_runner.py  test_directories.py  test_display.py  test_project.py  test_question.py  test_question_suite.py  test_set_field.py  test_validtor.py
merlin/utils/: console_text.py  set_field.py
python_project_wizard/: build_python_project.py  directories.py  field.py  file.py  main.py  project.py
python_project_wizard/build_project/: build_files.py  build_project.py  clean_main_content.py  directories.py  file.py  file_builder.py  file_formatter.py  format_file_content.py  pipenv.py  pipenv_builder.py  project_builder.py
python_project_wizard/console/: console.py
python_project_wizard/dialog/: console_dialog.py  dialog.py  sync_dialog.py
python_project_wizard/display/: console.py
python_project_wizard/file_content_store/: folder_store.py
python_project_wizard/file_store/: file_store.py  folder_store.py
python_project_wizard/templates/: args.py  configs.py  launch.json  log.py  main.py  publish.py  pyproject.toml
scripts/: build.py  clean.py  utils.py
(+18 files in other folders)
